Fixed z-index issue and animations

--- a/src/css/dropDown.css
+++ b/src/css/dropDown.css
@@ -27,7 +27,10 @@
     border-radius: .64rem;
     padding: 1.8rem 2.4rem;
     background-color: var(--White);
-    box-shadow: 0 1rem 1rem -1rem #F1F1F1;}
+    box-shadow: 0 1rem 1rem -1rem #F1F1F1;
+    z-index: 100;
+
+}
 .dropDown-item{
     width: fit-content;
     position: relative;
